[metadata]
name = doglib
version = 0.1.1
author = Anton
author_email = anton.pollak@starcode.de
description = A simple package to manage dogs. Its aim is to demonstrate the use of packages in Python.
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src