[metadata]
name = doglib
version = 0.1.2
author = Starcode
author_email = info@starcode.de
description = Doglib ist eine Python-Bibliothek, die speziell entwickelt wurde, um Schülerinnen die grundlegenden Arbeitsprinzipien von Python-Bibliotheken auf einfache und unterhaltsame Weise zu erklären.
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    numpy
[options.packages.find]
where = src